--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
 
     </div>
 
-    <form action="">
+    <form action="mailto:kimsajaa0411@gmail.com">
 
         <input type="text" placeholder="name" class="box">
         <input type="email" placeholder="email" class="box">
