--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 
         <input type="text" placeholder="name" class="box">
         <input type="email" placeholder="email" class="box">
-        <input type="text" placeholder="project" class="box">
+        <input type="text" placeholder="subject" class="box">
         <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="message"></textarea>
         <button type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
 
