--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="#about"><i class="fas fa-user"></i>                                  tentang saya</a></li>
             <li><a href="#education"><i class="fas fa-graduation-cap"></i>                                   pendidikan</a></li>
             <li><a href="#contact"><i class="fas fa-address-book"></i>                                   contact</a></li>
-            <li><a href="#friends"><i class="fas fa-users"></i>                                   My Best Friend's</a></li>      
+            <li><a href="https://saweria.co/KimsArtGaming"><i class="fas fa-hand-holding-usd">                                   Link Donasi</a></li>      
         </ul>
     </nav>
 
@@ -192,218 +192,6 @@
 </section>
 
 <!-- contact section ends -->
-
-<!-- frIends section starts  -->
-
-<section class="friends" id="friends">
-    
-    <div class="table-container">
-        <h1 class="heading">10 My Best<span> Friend's</span></h1><br>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>NO</th>
-                    <th>NIM</th>
-                    <th>NAME</th>
-                    <th>ADDRESS</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td data-label="NO">1</td>
-                    <td data-label="NIM">41215585</td>
-                    <td data-label="NAME">ABDUL HAKIM</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-                <tr>
-                    <td data-label="NO">2</td>
-                    <td data-label="NIM">41215354</td>
-                    <td data-label="NAME">RYANZA DESTRINOLITA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-                <tr>
-                    <td data-label="NO">3</td>
-                    <td data-label="NIM">41215455</td>
-                    <td data-label="NAME">SAFITRI KHAERUL NISA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-                <tr>
-                    <td data-label="NO">4</td>
-                    <td data-label="NIM">41215657</td>
-                    <td data-label="NAME">SUPTA DANIL</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-                <tr>
-                    <td data-label="NO">5</td>
-                    <td data-label="NIM">41215988</td>
-                    <td data-label="NAME">PUTRA BUDI S</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-                <tr>
-                    <td data-label="NO">6</td>
-                    <td data-label="NIM">41215494</td>
-                    <td data-label="NAME">PATRIA GITA LAKSAMANA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-                <tr>
-                    <td data-label="NO">7</td>
-                    <td data-label="NIM">41215500</td>
-                    <td data-label="NAME">M RIZKI FAHREZA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-                <tr>
-                    <td data-label="NO">8</td>
-                    <td data-label="NIM">41215567</td>
-                    <td data-label="NAME">SUPARMAN</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-                <tr>
-                    <td data-label="NO">9</td>
-                    <td data-label="NIM">41215546</td>
-                    <td data-label="NAME">M KHOIRUL HUDA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-                <tr>
-                    <td data-label="NO">10</td>
-                    <td data-label="NIM">4121555</td>
-                    <td data-label="NAME">WIRA TRIYANA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="table-container">
-        <h1 class="heading">5 My Best<span> Friend's</span></h1><br>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>NO</th>
-                    <th>NIM</th>
-                    <th>NAME</th>
-                    <th>ADDRESS</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td data-label="NO">1</td>
-                    <td data-label="NIM">41215585</td>
-                    <td data-label="NAME">ABDUL HAKIM</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-                <tr>
-                    <td data-label="NO">2</td>
-                    <td data-label="NIM">41215354</td>
-                    <td data-label="NAME">RYANZA DESTRINOLITA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-                <tr>
-                    <td data-label="NO">3</td>
-                    <td data-label="NIM">41215455</td>
-                    <td data-label="NAME">SAFITRI KHAERUL NISA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-                <tr>
-                    <td data-label="NO">4</td>
-                    <td data-label="NIM">41215657</td>
-                    <td data-label="NAME">SUPTA DANIL</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-                <tr>
-                    <td data-label="NO">5</td>
-                    <td data-label="NIM">41215988</td>
-                    <td data-label="NAME">PUTRA BUDI S</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-    <div class="table-container">
-        <h1 class="heading">HTML Tabel<span> JQuery</span></h1><br>
-        <table class="table">
-            <thead>
-                <tr>
-                    <th>NO</th>
-                    <th>NIM</th>
-                    <th>NAME</th>
-                    <th>ADDRESS</th>
-                    <th>ACTION</th>
-                </tr>
-            </thead>
-            <tbody>
-                <tr>
-                    <td data-label="NO">1</td>
-                    <td data-label="NIM">41215585</td>
-                    <td data-label="NAME">ABDUL HAKIM</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                    <td data-label="#"><a href="#" class="btn">HAPUS</a></td>
-                </tr>
-                <tr>
-                    <td data-label="NO">2</td>
-                    <td data-label="NIM">41215354</td>
-                    <td data-label="NAME">RYANZA DESTRINOLITA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                    <td data-label="#"><a href="#" class="btn">HAPUS</a></td>
-                </tr>
-                <tr>
-                    <td data-label="NO">3</td>
-                    <td data-label="NIM">41215455</td>
-                    <td data-label="NAME">SAFITRI KHAERUL NISA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                    <td data-label="#"><a href="#" class="btn">HAPUS</a></td>
-                </tr>
-                <tr>
-                    <td data-label="NO">4</td>
-                    <td data-label="NIM">41215657</td>
-                    <td data-label="NAME">SUPTA DANIL</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                    <td data-label="#"><a href="#" class="btn">HAPUS</a></td>
-                </tr>
-                <tr>
-                    <td data-label="NO">5</td>
-                    <td data-label="NIM">41215988</td>
-                    <td data-label="NAME">PUTRA BUDI S</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                    <td data-label="#"><a href="#" class="btn">HAPUS</a></td>
-                </tr>
-                <tr>
-                    <td data-label="NO">6</td>
-                    <td data-label="NIM">41215494</td>
-                    <td data-label="NAME">PATRIA GITA LAKSAMANA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                    <td data-label="#"><a href="#" class="btn">HAPUS</a></td>
-                </tr>
-                <tr>
-                    <td data-label="NO">7</td>
-                    <td data-label="NIM">41215500</td>
-                    <td data-label="NAME">M RIZKI FAHREZA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                    <td data-label="#"><a href="#" class="btn">HAPUS</a></td>
-                </tr>
-                <tr>
-                    <td data-label="NO">8</td>
-                    <td data-label="NIM">41215567</td>
-                    <td data-label="NAME">SUPARMAN</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                    <td data-label="#"><a href="#" class="btn">HAPUS</a></td>
-                </tr>
-                <tr>
-                    <td data-label="NO">9</td>
-                    <td data-label="NIM">41215546</td>
-                    <td data-label="NAME">M KHOIRUL HUDA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                    <td data-label="#"><a href="#" class="btn">HAPUS</a></td>
-                </tr>
-                <tr>
-                    <td data-label="NO">10</td>
-                    <td data-label="NIM">4121555</td>
-                    <td data-label="NAME">WIRA TRIYANA</td>
-                    <td data-label="ADDRESS">CIREBON</td>
-                    <td data-label="#"><a href="#" class="btn">HAPUS</a></td>
-                </tr>
-            </tbody>
-        </table>
-    </div>
-</section>
 
 <!-- scroll top button  -->
 
