--- a/index.html
+++ b/index.html
@@ -186,6 +186,13 @@
         <button type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
 
     </form>
+    
+    <div class="kartu-tutor">
+        <a href="https://www.tiktok.com/@tuan_kims?lang=id-ID" target="_blank"><button class="btn"><i class="fab fa-facebook"> facebook</i></button></a>
+        <a href="https://www.instagram.com/kimsart_11/?hl=en" target="_blank"><button class="btn"><i class="fab fa-instagram"> instagram</i></button></a>
+        <a href="https://discord.gg/h73P76n7" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
+        <a href="https://www.youtube.com/channel/UC-x5UTblR2Ybtfg_xBfz9rQ"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
+    </div>
 
 </div>
 
