--- a/index.html
+++ b/index.html
@@ -192,6 +192,7 @@
         <a href="https://www.instagram.com/kimsart_11/?hl=en" target="_blank"><button class="btn"><i class="fab fa-instagram"> instagram</i></button></a>
         <a href="https://discord.gg/h73P76n7" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
         <a href="https://www.youtube.com/channel/UC-x5UTblR2Ybtfg_xBfz9rQ"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
+        <a href="https://https://www.tiktok.com/?lang=id-IDtarget="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
     </div>
 
 </div>
