--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
 
     <h3>Hai, Perkenalkan nama </h3>
     <h1>Saya <span>Abdul Hakim</span></h1>
-    <p>MOTTO<br>Proses Tidak Akan Mengkhianati Hasil Tanpa Adanya Berusaha Dan Berdo'a</p>
+    <h1><span>Motto</span></h1>
+    <p>Proses Tidak Akan Mengkhianati Hasil Tanpa Adanya Berusaha Dan Berdo'a</p>
     <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
 </section>
