--- a/index.html
+++ b/index.html
@@ -76,23 +76,23 @@
     <div class="counter">
 
         <div class="box">
-            <span>2+</span>
-            <h3>years of experience</h3>
+            <span>10%</span>
+            <h3>ngopi heula</h3>
         </div>
 
         <div class="box">
-            <span>100+</span>
-            <h3>porject completed</h3>
+            <span>20%</span>
+            <h3>main ml</h3>
         </div>
 
         <div class="box">
-            <span>430+</span>
-            <h3>happy clients</h3>
+            <span>20%</span>
+            <h3>cari inspirasi</h3>
         </div>
 
         <div class="box">
-            <span>12+</span>
-            <h3>awards won</h3>
+            <span>50%</span>
+            <h3>ngampus</h3>
         </div>
 
     </div>
