--- a/index.html
+++ b/index.html
@@ -193,9 +193,9 @@
     <div class="kartu-tutor">
         <a href="https://web.facebook.com/profile.php?id=100068082137036" target="_blank"><button class="btn"><i class="fab fa-facebook"> facebook</i></button></a>
         <a href="https://www.instagram.com/kimsart_11/?hl=en" target="_blank"><button class="btn"><i class="fab fa-instagram"> instagram</i></button></a>
-        <a href="https://discord.gg/h73P76n7" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
+        <a href="https://discord.gg/gHzS2J7X" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
         <a href="https://www.youtube.com/channel/UC-x5UTblR2Ybtfg_xBfz9rQ"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
-        <a href="https://www.tiktok.com/@tuan_kims?lang=id-ID"target="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
+        <a href="https://www.tiktok.com/@cimeong_ruu?is_from_webapp=1&sender_device=pc"target="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
     </div>
 
 </div>
