--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <li><a href="#about"><i class="fas fa-user"></i>                                  tentang saya</a></li>
             <li><a href="#education"><i class="fas fa-graduation-cap"></i>                                   pendidikan</a></li>
             <li><a href="#contact"><i class="fas fa-address-book"></i>                                   contact</a></li>
-            <li><a href="#"target="_blank"><i class="fas fa-hand-holding-usd">                                   Link Donasi</a></li>      
+            <li><a href="#info"target="_blank"><i class="fas fa-hand-holding-usd">                                   Link Donasi</a></li>      
         </ul>
     </nav>
 
@@ -50,7 +50,7 @@
     <br>
     <h1><span>Motto</span></h1>
     <p>Proses Tidak Akan Mengkhianati Hasil Tanpa Adanya Berusaha Dan Berdo'a</p>
-    <a href="#about"><button class="btn">about me <i class="fas fa-user"></i></button></a>
+    <a href="#"><button class="btn">about me <i class="fas fa-user"></i></button></a>
 
 </section>
 
@@ -66,11 +66,8 @@
 
     <div class="info">
         <h3> <span> Nama : </span> Abdul Hakim </h3>
-        <h3> <span> NIM : </span> 41215585 </h3>
-        <h3> <span> Alamat : </span> Jl. Ki Ageng Tapa Kel. Pejambon </h3>
-        <h3> <span> Prodi : </span> Teknik Informatika </h3>
-        <h3> <span> Kelas : </span> KIP P2 </h3>
-        <a href="/images/CV ABDUL HAKIM.jpg" download=""><button class="btn"> download CV <i class="fas fa-download"></i> </button></a>
+        <h3> <span> Hobi : </span> Gamers </h3>
+        <a href="#"><button class="btn">about me <i class="fas fa-user"></i></button></a>
     </div>
 
     <div class="counter">
@@ -172,9 +169,9 @@
         <h3 class="title">contact info</h3>
 
         <div class="info">
-            <h3> <i class="fas fa-envelope"></i> kimsajaa0411@gmail.com </h3>
+            <h3> <i class="fas fa-envelope"></i> exrengaming11 </h3>
             <h3> <i class="fas fa-phone"></i> +62 877-7040-0186 </h3>
-            <h3> <i class="fas fa-phone"></i> +62 812-2248-2304 </h3>
+            <h3> <i class="fas fa-phone"></i> +62 878-7875-8999 </h3>
             <h3> <i class="fas fa-map-marker-alt"></i> cirebon, indonesia - 45611. </h3>
         </div>
 
@@ -191,11 +188,10 @@
     </form>
     
     <div class="kartu-tutor">
-        <a href="https://web.facebook.com/profile.php?id=100068082137036" target="_blank"><button class="btn"><i class="fab fa-facebook"> facebook</i></button></a>
-        <a href="https://www.instagram.com/kimsart_11/?hl=en" target="_blank"><button class="btn"><i class="fab fa-instagram"> instagram</i></button></a>
-        <a href="https://discord.gg/gHzS2J7X" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
-        <a href="https://www.youtube.com/channel/UC-x5UTblR2Ybtfg_xBfz9rQ"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
-        <a href="https://www.tiktok.com/@cimeong_ruu?is_from_webapp=1&sender_device=pc"target="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
+        <a href="https://www.instagram.com/exren_11/?hl=id" target="_blank"><button class="btn"><i class="fab fa-instagram"> instagram</i></button></a>
+        <a href="https://discord.gg/FzvvDgxW" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
+        <a href="https://www.youtube.com/channel/UCeeZ1p7TMneTR67m_NtB1lg"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
+        <a href="https://www.tiktok.com/@exren_11"target="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
     </div>
 
 </div>
