--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     <br>
     <h1><span>Motto</span></h1>
     <p>Proses Tidak Akan Mengkhianati Hasil Tanpa Adanya Berusaha Dan Berdo'a</p>
-    <a href="#"><button class="btn">about me <i class="fas fa-user"></i></button></a>
+    <a href="#kartu-tutor"><button class="btn">selengkapnya <i class="fas fa-user"></i></button></a>
 
 </section>
 
@@ -67,7 +67,6 @@
     <div class="info">
         <h3> <span> Nama : </span> Abdul Hakim </h3>
         <h3> <span> Hobi : </span> Gamers </h3>
-        <a href="#"><button class="btn">about me <i class="fas fa-user"></i></button></a>
     </div>
 
     <div class="counter">
