--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio KimsArt</title>
+    <title>Website ExRen</title>
 
     <!-- font awesome cdn link  -->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
@@ -30,7 +30,7 @@
             <li><a href="#about"><i class="fas fa-user"></i>                                  tentang saya</a></li>
             <li><a href="#education"><i class="fas fa-graduation-cap"></i>                                   pendidikan</a></li>
             <li><a href="#contact"><i class="fas fa-address-book"></i>                                   contact</a></li>
-            <li><a href="#info"target="_blank"><i class="fas fa-hand-holding-usd">                                   Link Donasi</a></li>      
+            <li><a href="https://saweria.co/exrengaming"target="_blank"><i class="fas fa-hand-holding-usd">                                   Link Donasi</a></li>      
         </ul>
     </nav>
 
