--- a/index.html
+++ b/index.html
@@ -49,8 +49,7 @@
     <br>
     <br>
     <h1><span>Motto</span></h1>
-    <p>Proses Tidak Akan Mengkhianati Hasil Tanpa Adanya Berusaha Dan Berdo'a</p>
-    <a href="#kartu-tutor"><button class="btn">selengkapnya <i class="fas fa-user"></i></button></a>
+    <p>Proses Tidak Akan Mengkhianati Hasil Tanpa Adanya Berusaha Dan Berdo'a</p
 
 </section>
 
