--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
     <br>
     <br>
     <h1><span>Motto</span></h1>
-    <p>Proses Tidak Akan Mengkhianati Hasil Tanpa Adanya Berusaha Dan Berdo'a</p
+    <p>Proses Tidak Akan Mengkhianati Hasil Tanpa Adanya Berusaha Dan Berdo'a</p>
 
 </section>
 
