--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         <a href="https://discord.gg/FzvvDgxW" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
         <a href="https://www.youtube.com/channel/UCeeZ1p7TMneTR67m_NtB1lg"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
         <a href="https://www.tiktok.com/@exren_11"target="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
-        <a href="https://saweria.co/exrengaming"target="_blank"><button class="btn"><i class="fas fa-hand-holding-usd"> Saweria</i></button></a>
+         <li><a href="https://saweria.co/exrengaming"target="_blank"><i class="fas fa-hand-holding-usd">                                   Link Donasi</a></li>
     </div>
 
 </div>
