--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
             <li><a href="#home"><i class="fas fa-home"></i>                                   beranda</a></li>
             <li><a href="#about"><i class="fas fa-user"></i>                                  tentang saya</a></li>
             <li><a href="#education"><i class="fas fa-graduation-cap"></i>                                   pendidikan</a></li>
-            <li><a href="#contact"><i class="fas fa-address-book"></i>                                   contact</a></li>      
+            <li><a href="#contact"><i class="fas fa-address-book"></i>                                   contact</a></li>
+            <li><a href="https://saweria.co/exrengaming"target="_blank"><i class="fas fa-hand-holding-usd"></i>                                   Link Donasi</a></li>
         </ul>
     </nav>
 
@@ -189,7 +190,7 @@
         <a href="https://discord.gg/FzvvDgxW" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
         <a href="https://www.youtube.com/channel/UCeeZ1p7TMneTR67m_NtB1lg"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
         <a href="https://www.tiktok.com/@exren_11"target="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
-         <li><a href="https://saweria.co/exrengaming"target="_blank"><i class="fas fa-hand-holding-usd">                                   Link Donasi</a></li>
+         <li><a href="https://saweria.co/exrengaming"target="_blank"><i class="fas fa-hand-holding-usd"></i>                                   Link Donasi</a></li>
     </div>
 
 </div>
