--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
         <h3 class="title">contact info</h3>
 
         <div class="info">
-            <h3> <i class="fas fa-envelope"></i> exrengaming11 </h3>
+            <h3> <i class="fas fa-envelope"></i> exrengaming11@gmail.com </h3>
             <h3> <i class="fas fa-phone"></i> +62 877-7040-0186 </h3>
             <h3> <i class="fas fa-phone"></i> +62 878-7875-8999 </h3>
             <h3> <i class="fas fa-map-marker-alt"></i> cirebon, indonesia - 45611. </h3>
@@ -186,6 +186,7 @@
     </form>
     
     <div class="kartu-tutor">
+        <a href="https://web.facebook.com/profile.php?id=100025595433589" target="_blank"><button class="btn"><i class="fab fa-facebook"> instagram</i></button></a>
         <a href="https://www.instagram.com/exren_11/?hl=id" target="_blank"><button class="btn"><i class="fab fa-instagram"> instagram</i></button></a>
         <a href="https://discord.gg/FzvvDgxW" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
         <a href="https://www.youtube.com/channel/UCeeZ1p7TMneTR67m_NtB1lg"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
