--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
     <div class="kartu-tutor">
         <a href="https://web.facebook.com/profile.php?id=100025595433589" target="_blank"><button class="btn"><i class="fab fa-facebook"> facebook</i></button></a>
         <a href="https://www.instagram.com/exren_11/?hl=id" target="_blank"><button class="btn"><i class="fab fa-instagram"> instagram</i></button></a>
-        <a href="https://discord.gg/ugSNuv7PR4" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
+        <a href="https://discord.gg/CKvPKKbHYU" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
         <a href="https://www.youtube.com/channel/UCeeZ1p7TMneTR67m_NtB1lg"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
         <a href="https://www.tiktok.com/@exren_11"target="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
         <a href="https://saweria.co/exrengaming"target="_blank"><button class="btn"><i class="fas fa-hand-holding-usd"> Saweria</i></button></a>
