--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="#education"><i class="fas fa-graduation-cap"></i>                                   pendidikan</a></li>
             <li><a href="#contact"><i class="fas fa-address-book"></i>                                   contact</a></li>
             <li><a href="https://saweria.co/exrengaming"target="_blank"><i class="fas fa-hand-holding-usd"></i>                                   Saweria</a></li>
-            <li><a href="<li><a href="https://saweria.co/exrengaming"target="_blank"><i class="fas fa-hand-holding-usd"></i>                                   Trakteer</a></li>"target="_blank"><i class="fas fa-hand-holding-usd"></i>                                   Link Donasi</a></li>
+            <li><a href="https://trakteer.id/exren"target="_blank"><i class="fas fa-hand-holding-usd"></i>                                   Saweria</a></li>
         </ul>
     </nav>
 
