--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <li><a href="#education"><i class="fas fa-graduation-cap"></i>                                   pendidikan</a></li>
             <li><a href="#contact"><i class="fas fa-address-book"></i>                                   contact</a></li>
             <li><a href="https://saweria.co/exrengaming"target="_blank"><i class="fas fa-hand-holding-usd"></i>                                   Saweria</a></li>
-            <li><a href="https://trakteer.id/exren"target="_blank"><i class="fas fa-hand-holding-usd"></i>                                   Saweria</a></li>
+            <li><a href="https://trakteer.id/exren"target="_blank"><i class="fas fa-hand-holding-usd"></i>                                   Trakteer</a></li>
         </ul>
     </nav>
 
@@ -193,6 +193,7 @@
         <a href="https://www.youtube.com/channel/UCeeZ1p7TMneTR67m_NtB1lg"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
         <a href="https://www.tiktok.com/@exren_ajaa"target="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
         <a href="https://saweria.co/exrengaming"target="_blank"><button class="btn"><i class="fas fa-hand-holding-usd"> Saweria</i></button></a>
+        <a href="https://trakteer.id/exren"target="_blank"><button class="btn"><i class="fas fa-hand-holding-usd"> Trakteer</i></button></a>
     </div>
 
 </div>
