--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
         <a href="https://www.youtube.com/channel/UCeeZ1p7TMneTR67m_NtB1lg"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
         <a href="https://www.tiktok.com/@exren_ajaa"target="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
         <a href="https://saweria.co/exrengaming"target="_blank"><button class="btn"><i class="fas fa-hand-holding-usd"> Saweria</i></button></a>
-        <a href="https://trakteer.id/exren"target="_blank"><button class="btn"><i class="fas fa-hand-holding-usd"> Trakteer</i></button></a>
+        <a href="https://trakteer.id/exren"target="_blank"><button class="btn"><i class="fas-solid fa-mug-saucer"> Trakteer</i></button></a>
     </div>
 
 </div>
