--- a/index.html
+++ b/index.html
@@ -169,8 +169,8 @@
 
         <div class="info">
             <h3> <i class="fas fa-envelope"></i> exrengaming11@gmail.com </h3>
-            <h3> <i class="fas fa-phone"></i> +62 877-7040-**** </h3>
-            <h3> <i class="fas fa-phone"></i> +62 878-7875-**** </h3>
+            <h3> <i class="fas fa-phone"></i> +62 8777******** </h3>
+            <h3> <i class="fas fa-phone"></i> +62 8787******** </h3>
             <h3> <i class="fas fa-map-marker-alt"></i> cirebon, indonesia - 45611. </h3>
         </div>
 
