--- a/index.html
+++ b/index.html
@@ -173,24 +173,10 @@
         </div>
 
     </div>
-    
-    <form
-  action="https://formspree.io/f/mgebbqgo"
-  method="POST"
->
-  <label>
-    Your email:
-    <input type="email" name="email">
-  </label>
-  <label>
-    Your message:
-    <textarea name="message"></textarea>
-  </label>
-  <!-- your other form fields go here -->
-  <button type="submit">Send</button>
-</form>
 
-    <form action="mailto:kimsajaa0411@gmail.com">
+    <form 
+        action="mailto:kimsajaa0411@gmail.com"
+        method="POST">
 
         <input type="text" placeholder="name" class="box">
         <input type="email" placeholder="email" class="box">
