--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
     </div>
 
     <form 
-        action="mailto:kimsajaa0411@gmail.com"
+        action="mailto:exrengaming11@gmail.com"
         method="POST">
 
         <input type="text" placeholder="name" class="box">
