--- a/index.html
+++ b/index.html
@@ -180,8 +180,8 @@
 
         <input type="text" placeholder="name" class="box">
         <input type="email" placeholder="email" class="box">
-        <input type="text" placeholder="subject" class="box">
-        <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="message"></textarea>
+        <input type="text" placeholder="UID Genshin" class="box">
+        <textarea name="" id="" cols="30" rows="10" class="box message" placeholder="keterangan"></textarea>
         <button type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
 
     </form>
