--- a/index.html
+++ b/index.html
@@ -46,10 +46,15 @@
     <h3>Hai, Perkenalkan nama </h3>
     <h1>Saya <span>Abdul Hakim</span></h1>
     <br>
-    <br>
     <h1><span>Motto</span></h1>
-    <p>Proses Tidak Akan Mengkhianati Hasil Tanpa Adanya Berusaha Dan Berdo'a</p>
-
+    <h3>Proses tidak akan mengkhianati hasil tanpa adanya berusaha dan berdo'a</h3>
+    <br>
+    <h1><span>Support</span> Me</h1>
+    <h3><span>Link</span> scroll ke bawah ya disitu ada <span>saweria</span> & <span>trakteer</span></h3>
+    <br>
+    <h1>Hobi Saya </h1>
+    <h3>Programming <span>&</span> Gamer's</h3>
+    
 </section>
 
 <!-- home section ends -->
