--- a/index.html
+++ b/index.html
@@ -44,16 +44,10 @@
 <section class="home" id="home">
 
     <h3>Hai, Perkenalkan nama </h3>
-    <h1>Saya <span>Abdul Hakim</span></h1>
+    <h1><span>Saya Abdul Hakim</span></h1>
     <br>
-    <h1><span>Motto</span></h1>
-    <h3>Proses tidak akan mengkhianati hasil tanpa adanya berusaha dan berdo'a</h3>
-    <br>
-    <h1><span>Support</span> Me</h1>
-    <h3><span>Link</span> scroll ke bawah ya disitu ada <span>saweria</span> & <span>trakteer</span></h3>
-    <br>
-    <h1>Hobi Saya </h1>
-    <h3>Programming <span>&</span> Gamer's</h3>
+    <h1>Support Me</h1>
+    <h3><span>Link scroll ke bawah ya disitu ada saweria & trakteer</span></h3>
     
 </section>
 
