--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h1><span>Saya Abdul Hakim</span></h1>
     <br>
     <h1>Support Me</h1>
-    <h3><span>Link scroll ke bawah ya disitu ada saweria & trakteer</span></h3>
+    <h2>Link scroll ke bawah ya disitu ada saweria & trakteer</h2>
     
 </section>
 
