--- a/index.html
+++ b/index.html
@@ -46,8 +46,8 @@
     <h3>Hai, Perkenalkan nama </h3>
     <h1><span>Saya Abdul Hakim</span></h1>
     <br>
-    <h1>Support Me</h1>
-    <h2>Link scroll ke bawah ya disitu ada saweria & trakteer</h2>
+    <h1><span>Support Me</span></h1>
+    <h4>Link scroll ke bawah ya disitu ada saweria & trakteer</h4>
     
 </section>
 
