--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h1><span>Saya Abdul Hakim</span></h1>
     <br>
     <h1><span>Support Me</span></h1>
-    <h3>Link scroll ke bawah disitu ada saweria & trakteer</h3>
+    <h3>Link scroll ke bawah disitu ada saweria & trakteer<i class="fas fa-face-smile-hearts"></i></h3>
     
 </section>
 
