--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
 
         <div class="info">
             <h3> <i class="fas fa-envelope"></i> exrengaming11@gmail.com </h3>
-            <h3> <i class="fas fa-map-marker-alt"></i> cirebon, indonesia - 45611. </h3>
+            <h3> <i class="fas fa-map-marker-alt"></i> Jl. Ki Ageng Tapa Kel. Pejambon Kec. Sumber Kab. cirebon, indonesia - 45611. </h3>
         </div>
 
     </div>
