--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h1><span>Saya Abdul Hakim</span></h1>
     <br>
     <h3><span>Support</span> Me</h3>
-    <h3>Link scroll ke bawah disitu ada saweria & trakteer</i></h3><i class="fa-regular fa-face-smile-hearts"></i>
+    <p>Link scroll ke bawah disitu ada saweria & trakteer</i></p>
     
 </section>
 
