--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         <ul>
             <li><a href="#home"><i class="fas fa-home"></i>                                   beranda</a></li>
             <li><a href="#about"><i class="fas fa-user"></i>                                  tentang saya</a></li>
-            <li><a href="#education"><i class="fas fa-graduation-cap"></i>                                   pendidikan</a></li>
+            <li><a href="#education"><i class="fas fa-laptop"></i>                                   Spesifikasi Laptop</a></li>
             <li><a href="#contact"><i class="fas fa-address-book"></i>                                   contact</a></li>
         </ul>
     </nav>
@@ -100,50 +100,50 @@
 
 <section class="education" id="education">
 
-<h1 class="heading"><span>Pendidikan</span> saya </h1>
+<h1 class="heading"><span>Spesifikasi</span> Laptop</h1>
 
 <div class="box-container">
 
     <div class="box">
-        <i class="fas fa-graduation-cap"></i>
-        <span>2012</span>
-        <h3>lulus sekolah dasar</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <i class="fas fa-laptop"></i>
+        <span>Laptop</span>
+        <h3>Operating System</h3>
+        <p>Windows 10 Pro 64-bit (10.0, Build 19045) (19041.vb_release.191206-1406)</p>
     </div>
 
     <div class="box">
-        <i class="fas fa-graduation-cap"></i>
-        <span>2016</span>
-        <h3>graduated from junior high school</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <i class="fas fa-laptop"></i>
+        <span>Laptop</span>
+        <h3>Processor</h3>
+        <p>Intel(R) Core(TM) i7-4800MQ CPU @ 2.70GHz (8 CPUs), ~2.7GHz</p>
     </div>
 
     <div class="box">
-        <i class="fas fa-graduation-cap"></i>
-        <span>2019</span>
-        <h3>graduated from vocational high school</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <i class="fas fa-laptop"></i>
+        <span>Laptop</span>
+        <h3>Memory (RAM)</h3>
+        <p>16384MB RAM</p>
     </div>
 
     <div class="box">
-        <i class="fas fa-graduation-cap"></i>
-        <span>2019</span>
-        <h3>work at PT. LUXINDO</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <i class="fas fa-laptop"></i>
+        <span>Laptop</span>
+        <h3>Display Devices</h3>
+        <p>Intel(R) HD Graphics 4600 <br>NVIDIA Quadro K1100M</p>
     </div>
 
     <div class="box">
-        <i class="fas fa-graduation-cap"></i>
-        <span>2020</span>
-        <h3>work in the village</h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <i class="fas fa-laptop"></i>
+        <span>Laptop</span>
+        <h3>Hardisk</h3>
+        <p>320GB</p>
     </div>
 
     <div class="box">
-        <i class="fas fa-graduation-cap"></i>
-        <span>2021</span>
-        <h3>enter STMIK IKMI college    </h3>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Obcaecati quos alias praesentium. Id autem provident laborum quae, distinctio eaque temporibus!</p>
+        <i class="fas fa-laptop"></i>
+        <span>Laptop</span>
+        <h3>SSD</h3>
+        <p>256GB</p>
     </div>
 
 </div>
