--- a/index.html
+++ b/index.html
@@ -108,14 +108,14 @@
         <i class="fas fa-laptop"></i>
         <span>Laptop</span>
         <h3>Operating System</h3>
-        <p>Windows 10 Pro 64-bit (10.0, Build 19045) (19041.vb_release.191206-1406)</p>
+        <p>Windows 10 Pro 64-bit</p>
     </div>
 
     <div class="box">
         <i class="fas fa-laptop"></i>
         <span>Laptop</span>
         <h3>Processor</h3>
-        <p>Intel(R) Core(TM) i7-4800MQ CPU @ 2.70GHz (8 CPUs), ~2.7GHz</p>
+        <p>Intel(R) Core(TM) i7-4800MQ</p>
     </div>
 
     <div class="box">
@@ -129,7 +129,8 @@
         <i class="fas fa-laptop"></i>
         <span>Laptop</span>
         <h3>Display Devices</h3>
-        <p>Intel(R) HD Graphics 4600 <br>NVIDIA Quadro K1100M</p>
+        <p>Intel(R) HD Graphics 4600</p>
+        <p>NVIDIA Quadro K1100M</p>
     </div>
 
     <div class="box">
