--- a/index.html
+++ b/index.html
@@ -70,12 +70,12 @@
 
         <div class="box">
             <span>10%</span>
-            <h3>ngopi heula</h3>
+            <h3>Bareng Teman</h3>
         </div>
 
         <div class="box">
             <span>20%</span>
-            <h3>main ml</h3>
+            <h3>Gaming</h3>
         </div>
 
         <div class="box">
