--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
     <br>
     <h3><span>Support</span> Me</h3>
     <p>Link scroll ke bawah disitu ada saweria & trakteer</i></p>
+    <a href="#karu-tutor"><button class="btn">Contact <i class="fas fa-address-book"></i></button></a>
     
 </section>
 
@@ -190,7 +191,7 @@
         <a href="https://discord.gg/CKvPKKbHYU" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
         <a href="https://www.youtube.com/channel/UCeeZ1p7TMneTR67m_NtB1lg"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
         <a href="https://www.tiktok.com/@exren_ajaa"target="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
-        <a href="https://saweria.co/exrengaming"target="_blank"><button class="btn"><i class="fas fa-hand-holding-usd"> Saweria</i></button></a>
+        <a href="https://saweria.co/exrengaming"target="_blank"><button class="btn"><i class="fas fa-gift"> Saweria</i></button></a>
     </div>
 
 </div>
