--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <br>
     <h3><span>Support</span> Me</h3>
     <p>Link scroll ke bawah disitu ada saweria & trakteer</i></p>
-    <a href="#karu-tutor"><button class="btn">Contact <i class="fas fa-address-book"></i></button></a>
+    <a href="#contact"><button class="btn">Contact <i class="fas fa-address-book"></i></button></a>
     
 </section>
 
