--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <h1><span>Saya Abdul Hakim</span></h1>
     <br>
     <h3><span>Support</span> Me</h3>
-    <p>Link scroll ke bawah disitu ada saweria & trakteer</i></p>
+    <h3>Link pencet di bawah ini, disitu ada saweria</h3>
     <a href="#contact"><button class="btn">Contact <i class="fas fa-address-book"></i></button></a>
     
 </section>
