--- a/index.html
+++ b/index.html
@@ -108,45 +108,51 @@
 
     <div class="box">
         <i class="fas fa-laptop"></i>
-        <span>Laptop</span>
-        <h3>Operating System</h3>
-        <p>Windows 10 Pro 64-bit</p>
+        <span>LAPTOP</span>
+        <h3>LENOVO TINKPAD W540</h3>
+        <p>Windows 10 Pro 64-bit</P>
+        <P>NVIDIA Quadro K1100M</P>
+        <P>Intel(R) Core(TM) i7-4800MQ</P>
+        <P>16GB RAM</P>
+        <P>SSD 256GB</P>
+        <P>HDD 320GB</P>
     </div>
 
     <div class="box">
         <i class="fas fa-laptop"></i>
-        <span>Laptop</span>
-        <h3>Processor</h3>
-        <p>Intel(R) Core(TM) i7-4800MQ</p>
+        <span>MOUSE</span>
+        <h3>REXUS</h3>
+        <p>X18 Rifle</p>
     </div>
 
     <div class="box">
         <i class="fas fa-laptop"></i>
-        <span>Laptop</span>
-        <h3>Memory (RAM)</h3>
-        <p>16384MB RAM</p>
+        <span>GAMEPAD</span>
+        <h3>REXUS</h3>
+        <p>Gladius GX100</p>
     </div>
 
     <div class="box">
         <i class="fas fa-laptop"></i>
-        <span>Laptop</span>
-        <h3>Display Devices</h3>
-        <p>Intel(R) HD Graphics 4600</p>
-        <p>NVIDIA Quadro K1100M</p>
+        <span>HEADSET</span>
+        <h3>REXUS</h3>
+        <p>Thundervox HX 9</p>
     </div>
 
     <div class="box">
         <i class="fas fa-laptop"></i>
-        <span>Laptop</span>
-        <h3>Hardisk</h3>
-        <p>320GB</p>
+        <span>SPEAKER</span>
+        <h3>LENYES</h3>
+        <p>Speaker S-220</p>
+        <p>Belum punya tetapi ingin banget</p>
     </div>
 
     <div class="box">
         <i class="fas fa-laptop"></i>
-        <span>Laptop</span>
-        <h3>SSD</h3>
-        <p>256GB</p>
+        <span>KEYBOARD</span>
+        <h3>REXUS</h3>
+        <p>Mechanical Legionare MX5.2 TKL Finali</p>
+        <p>Belum punya tetapi ingin banget</p>
     </div>
 
 </div>
