--- a/index.html
+++ b/index.html
@@ -113,9 +113,8 @@
         <p>Windows 10 Pro 64-bit</P>
         <P>NVIDIA Quadro K1100M</P>
         <P>Intel(R) Core(TM) i7-4800MQ</P>
+        <P>SSD 256GB/HDD 320GB</P>
         <P>16GB RAM</P>
-        <P>SSD 256GB</P>
-        <P>HDD 320GB</P>
     </div>
 
     <div class="box">
