--- a/index.html
+++ b/index.html
@@ -110,9 +110,8 @@
         <i class="fas fa-laptop"></i>
         <span>LAPTOP</span>
         <h3>LENOVO TINKPAD W540</h3>
-        <p>Windows 10 Pro 64-bit</P>
         <P>NVIDIA Quadro K1100M</P>
-        <P>Intel(R) Core(TM) i7-4800MQ</P>
+        <P>Intel Core i7 Gen 4</P>
         <P>SSD 256GB/HDD 320GB</P>
         <P>16GB RAM</P>
     </div>
@@ -143,7 +142,7 @@
         <span>SPEAKER</span>
         <h3>LENYES</h3>
         <p>Speaker S-220</p>
-        <p>Belum punya tetapi ingin banget</p>
+        <p><span>Belum punya tetapi ingin banget</span></p>
     </div>
 
     <div class="box">
@@ -151,7 +150,7 @@
         <span>KEYBOARD</span>
         <h3>REXUS</h3>
         <p>Mechanical Legionare MX5.2 TKL Finali</p>
-        <p>Belum punya tetapi ingin banget</p>
+        <p><span>Belum punya tetapi ingin banget</span></p>
     </div>
 
 </div>
