--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
         <span>SPEAKER</span>
         <h3>LENYES</h3>
         <p>Speaker S-220</p>
-        <p><span>Belum punya tetapi ingin banget</span></p>
+        <p><span>Belum punya</span></p>
     </div>
 
     <div class="box">
@@ -150,7 +150,7 @@
         <span>KEYBOARD</span>
         <h3>REXUS</h3>
         <p>Mechanical Legionare MX5.2 TKL Finali</p>
-        <p><span>Belum punya tetapi ingin banget</span></p>
+        <p><span>Belum punya</span></p>
     </div>
 
 </div>
