--- a/index.html
+++ b/index.html
@@ -120,28 +120,28 @@
         <i class="fas fa-laptop"></i>
         <span>MOUSE</span>
         <h3>REXUS</h3>
-        <p>X18 Rifle</p>
+        <p>Rexus X18 Rifle</p>
     </div>
 
     <div class="box">
         <i class="fas fa-laptop"></i>
         <span>GAMEPAD</span>
         <h3>REXUS</h3>
-        <p>Gladius GX100</p>
+        <p>Rexus Gladius GX100</p>
     </div>
 
     <div class="box">
         <i class="fas fa-laptop"></i>
         <span>HEADSET</span>
         <h3>REXUS</h3>
-        <p>Thundervox HX 9</p>
+        <p>Rexus Thundervox HX 9</p>
     </div>
 
     <div class="box">
         <i class="fas fa-laptop"></i>
         <span>SPEAKER</span>
         <h3>LENYES</h3>
-        <p>Speaker S-220</p>
+        <p>Lenyes Speaker S-220</p>
         <p><span>Belum punya</span></p>
     </div>
 
@@ -149,7 +149,7 @@
         <i class="fas fa-laptop"></i>
         <span>KEYBOARD</span>
         <h3>REXUS</h3>
-        <p>Mechanical Legionare MX5.2 TKL Finali</p>
+        <p>Rexus Mechanical Legionare MX5.2 TKL Finali</p>
         <p><span>Belum punya</span></p>
     </div>
 
