--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
         <a href="https://discord.com/invite/Has4Tte6rm" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
         <a href="https://www.youtube.com/channel/UCeeZ1p7TMneTR67m_NtB1lg"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
         <a href="https://www.tiktok.com/@exren_ajaa"target="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
-        <a href="https://saweria.co/exrengaming"target="_blank"><button class="btn"><i class="fas fa-gift"> Saweria</i></button></a>
+        <a href="https://saweria.co/ExRenGM"target="_blank"><button class="btn"><i class="fas fa-gift"> Saweria</i></button></a>
     </div>
 
 </div>
