--- a/index.html
+++ b/index.html
@@ -46,10 +46,16 @@
     <h3>Hai, Perkenalkan nama </h3>
     <h1><span>Saya Abdul Hakim</span></h1>
     <br>
+    <p>Terutama memainkan Genshin Impact & terkadang Minecraft plus beberapa game lainnya. Saya juga membuat konten di You Tube & TikTok.</p>
     <h3><span>Support</span> Me</h3>
-    <h3>Link pencet di bawah ini, disitu ada saweria</h3>
     <br>
-    <a href="#contact"><button class="btn">Contact <i class="fas fa-address-book"></i></button></a>
+    <div class="kartu-tutor">
+        <a href="https://saweria.co/ExRenGM"target="_blank"><button class="btn"><i class="fas fa-gift"> Saweria</i></button></a>
+        <a href="https://discord.gg/3C3YXtuzBq" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
+        <a href="https://www.tiktok.com/@exrengm"target="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
+        <a href="https://www.youtube.com/channel/UCeeZ1p7TMneTR67m_NtB1lg"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
+        <a href="https://www.instagram.com/exrengm/" target="_blank"><button class="btn"><i class="fab fa-instagram"> instagram</i></button></a>
+    </div>
     
 </section>
 
@@ -189,15 +195,6 @@
         <button type="submit" class="btn"> send <i class="fas fa-paper-plane"></i> </button>
 
     </form>
-    
-    <div class="kartu-tutor">
-        <a href="https://web.facebook.com/ExrenGM/" target="_blank"><button class="btn"><i class="fab fa-facebook"> facebook</i></button></a>
-        <a href="https://www.instagram.com/exrengm/" target="_blank"><button class="btn"><i class="fab fa-instagram"> instagram</i></button></a>
-        <a href="https://discord.com/invite/3C3YXtuzBq" target="_blank"><button class="btn"><i class="fab fa-discord"> discord</i></button></a>
-        <a href="https://www.youtube.com/channel/UCeeZ1p7TMneTR67m_NtB1lg"target="_blank"><button class="btn"><i class="fab fa-youtube"> Youtube</i></button></a>
-        <a href="https://www.tiktok.com/@exrengm"target="_blank"><button class="btn"><i class="fab fa-tiktok"> TikTok</i></button></a>
-        <a href="https://saweria.co/ExRenGM"target="_blank"><button class="btn"><i class="fas fa-gift"> Saweria</i></button></a>
-    </div>
 
 </div>
 
